k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-go-app-service
  labels:
    app: my-go-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: my-go-app
